[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_run_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_run_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_hit_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://assets/png/0x72_DungeonTilesetII_v1.4/frames/knight_m_run_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://lvls/lvl_2_player_damage/player_lvl2.gd" type="Script" id=10]
[ext_resource path="res://lvls/lvl_2_player_damage/Weapon.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 7 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
frames = SubResource( 1 )
animation = "run"
playing = true

[node name="WeaponAim" parent="AnimatedSprite" instance=ExtResource( 11 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="KnockBackTimer" to="." method="_on_KnockBackTimer_timeout"]
